# src/main/api-router.ts
@@ -60,11 +60,18 @@ export async function createApiRouter(api: Api): Promise<Router> {
   apiRouter.get("/routes/", async function (req: Request, res: Response) {
     try {
       const routes: api.PartialRoute[] = await api.getRoutes();
-      res.status(200).json(routes);
+      return res.status(200).json(routes);
     } catch (err) {
       console.error(err);
-      res.sendStatus(500);
+      return res.sendStatus(500);
     }
+  });
+
+  apiRouter.post("/routes", async function (req: Request, res: Response) {
+    return res.status(500).json({
+      type: "not-implemented",
+      message: "Route creation is not implemented"
+    });
   });
 
   return apiRouter;
